# lazymusic

./: .gitignore  Cargo.toml  README.md
lazy-app/: Cargo.toml
lazy-app/src/: app.rs  event.rs  main.rs
lazy-config/: Cargo.toml
lazy-config/src/: config.rs  keymap.rs  lib.rs  types.rs
lazy-core/: Cargo.toml
lazy-core/src/: lib.rs  structs.rs  traits.rs  types.rs
lazy-macro/: Cargo.toml
lazy-macro/src/: accessor.rs  event_mappings.rs  has_border_style.rs  has_title_style.rs  has_tui_style.rs  lib.rs  main.rs  utils.rs
lazy-tui/: Cargo.toml
lazy-tui/src/: lib.rs  macros.rs  navbar.rs  playback.rs  player.rs  progress.rs  root.rs  router_view.rs  traits.rs  types.rs
lazy-tui/src/player/: artist.rs  playback.rs  playback_mode.rs  playback_progress.rs  track.rs  volume.rs
src/: app.rs  event.rs  lib.rs  main.rs  tui.rs  ui.rs
src/tui/: event.rs  root.rs  theme.rs  traits.rs  types.rs
src/ui/: root.rs  traits.rs  types.rs
