[package]
name = "lazy-music"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
color-eyre = "0.6.5"
