[workspace]
members = ["lazy-app", "lazy-config", "lazy-core"]
[workspace.dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
color-eyre = "0.6.5"
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-error = "0.2.1"
